# Apollo

./: .gitignore  .mcp.json  Download_Vault.ps1  README.md  alembic.ini  apollo_down.bat  apollo_up.bat  docker-compose.y.broken  docker-compose.yaml  docker-compose.yml  hermes_control.bat  hermes_control.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md  session-handoff-2026-05-31.md  session-handoff-2026-06-01.md
_bmad-output/brainstorming/: brainstorming-session-2026-05-29-1841.md
_bmad-output/implementation-artifacts/: 1-1-initialize-domain-target-configuration-mcp.md  1-2-event-driven-queue-coordinate-generation.md  1-3-task-email-dispatch.md  2-1-inbound-email-ingestion-parsing.md  2-2-epistemological-sealing-ledger-commit-happy-path.md  2-3-quarantine-clarification-loop-exception-path.md  2-4-environmental-context-fingerprinting.md  3-1-ground-truth-market-validation.md  3-2-flexible-closure-ceremony-dispatch.md  3-3-statistical-calibration-scoring.md  4-1-worker-resilience-and-e2e-repair.md  4-2-operational-hardening.md  deferred-work.md  epic-3-retro-2026-06-09.md  epic-4-handoff.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  epistemological-schema-architecture.md  (+2 more)
legacy/: archive-report-2026-04-16.md
memory/: 2026-04-17-gemini-slicing.md  2026-04-17.md
scripts/: backup_core_project_files.sh  backup_memory.sh  memory_backup_daemon.sh
tests/: conftest.py  factories.py  utils.py
(+119 files in other folders)
