[project]
name = "apollo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "VladObreja", email = "vlad.obreja@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "jinja2>=3.1.6",
    "mcp>=1.27.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
]

[project.scripts]
apollo = "apollo:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "testcontainers>=4.14.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
